// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu basic 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 12px;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 12px;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
}

.c1 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:699px) {
  .c2 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .c1 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    onKeyDown={[Function]}
  >
    <button
      aria-label="Open Menu"
      className="c1"
      disabled={false}
      id="test-menu"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      type="button"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
        >
          Test Menu
        </span>
        <div
          className="c4"
        />
        <svg />
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu close by clicking outside 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div>
    <button
      aria-label="Open Menu"
      class="StyledButton-qbvYY jZaTeL"
      id="test-menu"
      type="button"
    >
      <div
        class="StyledBox-YaZNy jyWPQv"
      >
        <span
          class="StyledText-dmaDlZ cuXUhH"
        >
          Test
        </span>
        <div
          class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
        />
        <svg
          aria-label="FormDown"
          class="StyledIcon-hcpUvT bPezfS"
          color="#7D4CDB"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu close by clicking outside 2`] = `
<div
  class="StyledDrop-czaYBK lgQIaN"
  id="test-menu__drop"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="Menu__ContainerBox-fLCaaL gfFABp StyledBox-YaZNy hQeqTY"
  >
    <div
      class="StyledBox-YaZNy ckMYwJ"
    >
      <button
        aria-label="Close Menu"
        class="StyledButton-qbvYY jZaTeL"
        type="button"
      >
        <div
          class="StyledBox-YaZNy jyWPQv"
        >
          <span
            class="StyledText-dmaDlZ cuXUhH"
          >
            Test
          </span>
          <div
            class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
          />
          <svg
            aria-label="FormDown"
            class="StyledIcon-hcpUvT bPezfS"
            color="#7D4CDB"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <polyline
              fill="none"
              points="18 9 12 15 6 9"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="StyledBox-YaZNy jLqfV"
    >
      <div
        class="StyledBox-YaZNy ckMYwJ"
      >
        <button
          class="StyledButton-qbvYY fILeAh"
          disabled=""
          type="button"
        >
          <div
            class="StyledBox-YaZNy PasVd"
          >
            Item 1
          </div>
        </button>
      </div>
      <div
        class="StyledBox-YaZNy ckMYwJ"
      >
        <button
          class="StyledButton-qbvYY fILeAh"
          disabled=""
          type="button"
        >
          <div
            class="StyledBox-YaZNy PasVd"
          >
            Item 2
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu close by clicking outside 3`] = `
"@media only screen and (max-width:699px) {
  .jyWPQv {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jyWPQv {
    padding: 6px;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .ckMYwJ {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .ckMYwJ {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .jLqfV {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jLqfV {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .PasVd {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .PasVd {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .jZaTeL {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .fILeAh {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .eEPhap {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .kNamBk {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;

exports[`Menu close on esc 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div>
    <button
      aria-label="Open Menu"
      class="StyledButton-qbvYY jZaTeL"
      id="test-menu"
      type="button"
    >
      <div
        class="StyledBox-YaZNy jyWPQv"
      >
        <span
          class="StyledText-dmaDlZ cuXUhH"
        >
          Test
        </span>
        <div
          class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
        />
        <svg
          aria-label="FormDown"
          class="StyledIcon-hcpUvT bPezfS"
          color="#7D4CDB"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu close on tab 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div>
    <button
      aria-label="Open Menu"
      class="StyledButton-qbvYY jZaTeL"
      id="test-menu"
      type="button"
    >
      <div
        class="StyledBox-YaZNy jyWPQv"
      >
        <span
          class="StyledText-dmaDlZ cuXUhH"
        >
          Test
        </span>
        <div
          class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
        />
        <svg
          aria-label="FormDown"
          class="StyledIcon-hcpUvT bPezfS"
          color="#7D4CDB"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu custom message 1`] = `
.c5 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c5 *[stroke*="#"],
.c5 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*="#"],
.c5 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 12px;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 12px;
}

.c3 {
  font-size: 18px;
  line-height: 24px;
}

.c1 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:699px) {
  .c2 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .c1 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    onKeyDown={[Function]}
  >
    <button
      aria-label="Abrir Menu"
      className="c1"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      type="button"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
        >
          Test Menu
        </span>
        <div
          className="c4"
        />
        <svg
          aria-label="FormDown"
          className="c5"
          color="#7D4CDB"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu disabled 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div>
    <button
      aria-label="Open Menu"
      class="StyledButton-qbvYY fILeAh"
      disabled=""
      id="test-menu"
      type="button"
    >
      <div
        class="StyledBox-YaZNy jyWPQv"
      >
        <span
          class="StyledText-dmaDlZ cuXUhH"
        >
          Test
        </span>
        <div
          class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
        />
        <svg
          aria-label="FormDown"
          class="StyledIcon-hcpUvT bPezfS"
          color="#7D4CDB"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu navigate through suggestions and select 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div>
    <button
      aria-label="Open Menu"
      class="StyledButton-qbvYY jZaTeL"
      id="test-menu"
      type="button"
    >
      <div
        class="StyledBox-YaZNy jyWPQv"
      >
        <span
          class="StyledText-dmaDlZ cuXUhH"
        >
          Test
        </span>
        <div
          class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
        />
        <svg
          aria-label="FormDown"
          class="StyledIcon-hcpUvT bPezfS"
          color="#7D4CDB"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu open and close on click 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div>
    <button
      aria-label="Open Menu"
      class="StyledButton-qbvYY jZaTeL"
      id="test-menu"
      type="button"
    >
      <div
        class="StyledBox-YaZNy jyWPQv"
      >
        <span
          class="StyledText-dmaDlZ cuXUhH"
        >
          Test
        </span>
        <div
          class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
        />
        <svg
          aria-label="FormDown"
          class="StyledIcon-hcpUvT bPezfS"
          color="#7D4CDB"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu open and close on click 2`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div>
    <button
      aria-label="Open Menu"
      class="StyledButton-qbvYY jZaTeL"
      id="test-menu"
      type="button"
    >
      <div
        class="StyledBox-YaZNy jyWPQv"
      >
        <span
          class="StyledText-dmaDlZ cuXUhH"
        >
          Test
        </span>
        <div
          class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
        />
        <svg
          aria-label="FormDown"
          class="StyledIcon-hcpUvT bPezfS"
          color="#7D4CDB"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu open and close on click 3`] = `
<div
  class="StyledDrop-czaYBK lgQIaN"
  id="test-menu__drop"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="Menu__ContainerBox-fLCaaL gfFABp StyledBox-YaZNy hQeqTY"
  >
    <div
      class="StyledBox-YaZNy ckMYwJ"
    >
      <button
        aria-label="Close Menu"
        class="StyledButton-qbvYY jZaTeL"
        type="button"
      >
        <div
          class="StyledBox-YaZNy jyWPQv"
        >
          <span
            class="StyledText-dmaDlZ cuXUhH"
          >
            Test
          </span>
          <div
            class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
          />
          <svg
            aria-label="FormDown"
            class="StyledIcon-hcpUvT bPezfS"
            color="#7D4CDB"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <polyline
              fill="none"
              points="18 9 12 15 6 9"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="StyledBox-YaZNy jLqfV"
    >
      <div
        class="StyledBox-YaZNy ckMYwJ"
      >
        <button
          class="StyledButton-qbvYY fILeAh"
          disabled=""
          type="button"
        >
          <div
            class="StyledBox-YaZNy PasVd"
          >
            Item 1
          </div>
        </button>
      </div>
      <div
        class="StyledBox-YaZNy ckMYwJ"
      >
        <button
          class="StyledButton-qbvYY eEPhap"
          type="button"
        >
          <div
            class="StyledBox-YaZNy PasVd"
          >
            Item 2
          </div>
        </button>
      </div>
      <div
        class="StyledBox-YaZNy ckMYwJ"
      >
        <a
          class="StyledButton-kDOCUE kNamBk"
          href="/test"
        >
          <div
            class="StyledBox-YaZNy PasVd"
          >
            Item 3
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu open and close on click 4`] = `
"@media only screen and (max-width:699px) {
  .jyWPQv {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jyWPQv {
    padding: 6px;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .ckMYwJ {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .ckMYwJ {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .jLqfV {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jLqfV {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .PasVd {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .PasVd {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .jZaTeL {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .fILeAh {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .eEPhap {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .kNamBk {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;

exports[`Menu select an item 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div>
    <button
      aria-label="Open Menu"
      class="StyledButton-qbvYY jZaTeL"
      id="test-menu"
      type="button"
    >
      <div
        class="StyledBox-YaZNy jyWPQv"
      >
        <span
          class="StyledText-dmaDlZ cuXUhH"
        >
          Test
        </span>
        <div
          class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
        />
        <svg
          aria-label="FormDown"
          class="StyledIcon-hcpUvT bPezfS"
          color="#7D4CDB"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu with dropAlign renders 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div>
    <button
      aria-label="Open Menu"
      class="StyledButton-qbvYY jZaTeL"
      id="test-menu"
      type="button"
    >
      <div
        class="StyledBox-YaZNy jyWPQv"
      >
        <span
          class="StyledText-dmaDlZ cuXUhH"
        >
          Test
        </span>
        <div
          class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
        />
        <svg
          aria-label="FormDown"
          class="StyledIcon-hcpUvT bPezfS"
          color="#7D4CDB"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <polyline
            fill="none"
            points="18 9 12 15 6 9"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Menu with dropAlign renders 2`] = `
<div
  class="StyledDrop-czaYBK hDYRMY"
  id="test-menu__drop"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="Menu__ContainerBox-fLCaaL gfFABp StyledBox-YaZNy hQeqTY"
  >
    <div
      class="StyledBox-YaZNy ckMYwJ"
    >
      <button
        aria-label="Close Menu"
        class="StyledButton-qbvYY jZaTeL"
        type="button"
      >
        <div
          class="StyledBox-YaZNy jyWPQv"
        >
          <span
            class="StyledText-dmaDlZ cuXUhH"
          >
            Test
          </span>
          <div
            class="StyledBox__StyledBoxGap-eHDBek bKXmJV"
          />
          <svg
            aria-label="FormDown"
            class="StyledIcon-hcpUvT bPezfS"
            color="#7D4CDB"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <polyline
              fill="none"
              points="18 9 12 15 6 9"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="StyledBox-YaZNy jLqfV"
    >
      <div
        class="StyledBox-YaZNy ckMYwJ"
      >
        <button
          class="StyledButton-qbvYY fILeAh"
          disabled=""
          type="button"
        >
          <div
            class="StyledBox-YaZNy PasVd"
          >
            Item 1
          </div>
        </button>
      </div>
      <div
        class="StyledBox-YaZNy ckMYwJ"
      >
        <button
          class="StyledButton-qbvYY fILeAh"
          disabled=""
          type="button"
        >
          <div
            class="StyledBox-YaZNy PasVd"
          >
            Item 2
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu with dropAlign renders 3`] = `
"@media only screen and (max-width:699px) {
  .jyWPQv {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jyWPQv {
    padding: 6px;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .ckMYwJ {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .ckMYwJ {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .jLqfV {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jLqfV {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .PasVd {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .PasVd {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .jZaTeL {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .fILeAh {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .eEPhap {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .iraIky {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .dZSKYq {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .kNamBk {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;
